<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2013 Yu AOKI -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_label"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingLeft="6dip"
            android:paddingBottom="12dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#222222"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:padding="6dip"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/token_label"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:padding="2dip">
            <TextView
                android:id="@+id/result_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="6dip"
                android:textColor="#222222"/>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_label"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dip"
            android:layout_marginBottom="12dip"
            android:entries="@array/token_type_array"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/auth_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auth_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="6dip"
            android:textColor="#222222"/>
        <Button
            android:id="@+id/invalidate_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/invalidate_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="6dip"
            android:textColor="#222222"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>